--- a/package.json
+++ b/package.json
@@ -11,12 +11,12 @@
     "@types/node": "^16.11.36",
     "@types/react": "^18.0.9",
     "@types/react-dom": "^18.0.5",
-    "@types/styled-components": "^5.1.25",
+    "monaco-themes": "^0.4.2",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-scripts": "5.0.1",
     "react-select": "^5.3.2",
-    "styled-components": "^5.3.5",
+    "sass": "^1.52.3",
     "typescript": "^4.7.2"
   },
   "scripts": {
