--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.1",
+    "@types/marked": "^4.0.3",
     "@types/node": "^16.11.36",
     "@types/react": "^18.0.9",
     "@types/react-dom": "^18.0.5",
+    "marked": "^4.0.17",
     "monaco-themes": "^0.4.2",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
