--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -50,7 +50,10 @@
         "no-restricted-globals": "off",
         "default-param-last":"off",
         "no-param-reassign": "off",
-        "react/function-component-definition":"off"
+        "react/function-component-definition":"off",
+        "no-plusplus":"off",
+        "no-await-in-loop":"off",
+        "no-promise-executor-return":"off"
     },
     "settings": {
         "import/resolver":{
