--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react": "^18.0.9",
     "@types/react-dom": "^18.0.5",
     "axios": "^0.27.2",
+    "buffer": "^6.0.3",
     "marked": "^4.0.17",
     "monaco-themes": "^0.4.2",
     "react": "^18.1.0",
